Correctly align Stream Market content with header

--- a/src/components/layout/PanelChange/styles.module.scss
+++ b/src/components/layout/PanelChange/styles.module.scss
@@ -153,7 +153,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   @include tablet {
     flex: 1 0 65%;
     @include flexbox(flex-start, flex-start);
